Updated the README.md file